# simulation-core

./: .clang-format  .clang-tidy  .gitmodules  .iwyu.imp  CMakeLists.txt  README.md  codecov.yaml  conanfile.txt
.github/workflows/: release.yml  test.yml
cmake/: clang-tidy.cmake  code_coverage.cmake  iwyu.cmake
doc/: xml-format.md
examples/: on_off_tcp.xml  udp_echo.xml
src/: address.cpp  address.h  app_config.cpp  app_config.h  channel.h  device_types.h  main.cpp
src/model/: application.cpp  application.h  channel.cpp  channel.h  device.cpp  device.h  model.cpp  model.h  model_build_error.h  name_service.h  node.cpp  node.h  registrator.h
src/parser/: attribute_error.cpp  parse_util.h  parser.cpp  parser.h
src/utils/: address.h  object.h
tests/: CMakeLists.txt  bad_device_attribute.xml  model_tests.cpp  name_service_tests.cpp  set_attribute_tests.cpp  xml_parser_tests.cpp
